createImportMap() and class SpecimenImportAliasesIterator